# Zlides

./: .gitignore  AGENTS.md  GEMINI.md  PLAN.md  README_v2.md  ZZZlides.desktop  Zlides.desktop  backend_log.txt  capture_cot.py  capture_cot_delayed.py  cost_calc.py  index.html  launch.sh  main.py  mcp_wrapper.py  mock_backend.py  mock_log.txt  parse_test.py  parse_test2.py  parse_test3.py  patch_app.js  patch_app_tools.js  patch_batch.py  patch_command_cost.py  patch_cost.py  patch_imports.py  patch_mock.py  patch_parser.py  patch_rr.py  patch_rr_injector.py  patch_syntax.py  patch_upload_test.py  pyproject.toml  sample_stream.json  slide_server.py  slide_server.py.orig  slide_server.py.rej  slide_server.py_patch  test_agent.py
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
Kimi_Agent_Zai Slide Agent Hacks/: glm_ppt_agent_SECRETS.md  glm_ppt_agent_advanced_qa.md  glm_ppt_agent_code_skills.md  glm_ppt_agent_final_deep_dive.md  glm_ppt_slide_agent_guide.md
api-reference/: dark-cards.html  dark-neo.html  light-minimal.html  light-portal.html
api-reference-project/: index.html
frontend/: app.js  styles.css
frontend_svelte/: components.json  index.html  package-lock.json  package.json  svelte_log.txt  thinking.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend_svelte/src/: App.svelte  app.css
public/: index.html
public/assets/: abnfDiagram-VRR7QNED-B1udFU_p.js  (+524 more)
style_bank/: clean.json  dark.json  gitenglish.json  minimal.json
tests/: test_slide_server.py
(+1 files in other folders)
