[project]
name = "zlides"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "neo4j>=6.1.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sniffio>=1.3.1",
    "uvicorn>=0.41.0",
    "zai-sdk>=0.0.3.4",
    "zhipuai>=2.1.5.20250825",
]
